fix issue of overlapping divn
git-svn-id: file:///tmp/salem@142 07c41579-21cc-4512-95e7-b8629c30e65c

--- a/trunk/branch/cocoon/css/style.css
+++ b/trunk/branch/cocoon/css/style.css
@@ -460,20 +460,20 @@ ul li {
     padding-bottom: 2em;
 }
 
-.div2 {
+p.div2 {
     margin-left: 1em;
 }
 
-.div3 {
+p.div3 {
     margin-left: 1.5em;
 }
-.div4 {
+p.div4 {
     margin-left: 2em;
 }
-.div5 {
+p.div5 {
     margin-left: 2.5em;
 }
-.div6 {
+p.div6 {
     margin-left: 1em;
 }
 
